corrected sub menu items

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -130,9 +130,9 @@
           subhref: "user-manuals/testdroid-cloud/manual-testing"
         - subtitle: "Device Groups"
           subhref: "user-manuals/testdroid-cloud/device-groups"
-        - subtitle: "Account"
+        - subtitle: "Account Creation"
           subhref: "user-manuals/testdroid-cloud/account"
-        - subtitle: "Account Settings"
+        - subtitle: "Subscriptions"
           subhref: "user-manuals/testdroid-cloud/account-settings"
         - subtitle: "Reports"
           subhref: "user-manuals/testdroid-cloud/reports"
